terraform/vpc.tf
resource "aws_vpc" "devops_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = "DevOps-VPC"
    Environment = "Development"
    Project     = "AWS DevSecOps Capstone"
  }
}
